font and alignment issues fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,7 +16,7 @@ html, body {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Lexend", sans-serif;
   background-color: white;
 }
 :root {
